Point FastAPI service at backend entrypoint.

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     "api": {
       "framework": "fastapi",
-      "workspace": "backend",
+      "entrypoint": "backend/main.py",
       "routePrefix": "/api/py"
     }
   }
