--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     },
     "api": {
       "framework": "fastapi",
-      "entrypoint": "backend/main.py",
+      "entrypoint": "backend/not_main.py",
       "routePrefix": "/api/py"
     }
   }
