Move the Next.js app into a frontend workspace.

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "experimentalServices": {
     "web": {
       "framework": "nextjs",
+      "workspace": "frontend",
       "routePrefix": "/"
     },
     "api": {
