--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "experimentalServices": {
     "web": {
       "framework": "nextjs",
-      "workspace": "frontend",
+      "entrypoint": "frontend",
       "routePrefix": "/"
     },
     "api": {
